--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.26)
 
-project(cachimbo_coin LANGUAGES CXX)
+project(
+  cachimbo_coin
+  VERSION 1.0.0
+  DESCRIPTION "Cachimbo Coin"
+  LANGUAGES CXX)
 
+add_executable(cachimbo_coin src/main.cpp)
