--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,9 @@ project(
   DESCRIPTION "Cachimbo Coin"
   LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+add_subdirectory(src/BlockChain)
+
 add_executable(cachimbo_coin src/main.cpp)
