added sanitize to smake

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -19,9 +19,12 @@ set(GENERATOR_COMPILE_OPTIONS
   $<$<CXX_COMPILER_ID:Clang>:-Weverything>
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic -Werror>
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wno-c++98-compat>
-         $<$<CONFIG:RELEASE>:-Ofast>
-       $<$<CONFIG:DEBUG>:-O0>
-       $<$<CONFIG:DEBUG>:-ggdb3>
+  $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-fsanitize=address,undefined>
+  $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-fsanitize-address-use-after-scope>
+   $<$<CONFIG:RELEASE>:-Ofast>
+   $<$<CONFIG:DEBUG>:-O0>
+   $<$<CONFIG:DEBUG>:-ggdb3>
+ "-fsanitize=address,undefined"
 )
 
 #
@@ -34,11 +37,10 @@ add_custom_command(
 
 target_compile_options(openssl PRIVATE ${GENERATOR_COMPILE_OPTIONS})
 
-# fsanitize
-# target_compile_options(openssl PRIVATE -fsanitize=address,undefined)
-
 # link sanitize
-# target_link_options(openssl PRIVATE -fsanitize=address,undefined)
+target_link_options(openssl PRIVATE 
+  $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-fsanitize=address,undefined>
+  )
 
 find_package(OpenSSL REQUIRED)
 target_link_libraries(openssl OpenSSL::Crypto)
