Fixed includes and removed specific Werror

--- a/src/BlockChain/CMakeLists.txt
+++ b/src/BlockChain/CMakeLists.txt
@@ -9,7 +9,7 @@ target_compile_features(
 # Include include/BlockChainFloder
 get_filename_component(INCLUDE_FOLDER ../../include ABSOLUTE)
 
-target_include_directories(BlockChain PUBLIC ${INCLUDE_FOLDER}/BlockChain)
+target_include_directories(BlockChain PUBLIC ${INCLUDE_FOLDER}/BlockChain ${INCLUDE_FOLDER}/Utils)
 
 # Message target_include_directories
 get_target_property(BlockChain_INCLUDE_DIRS BlockChain INTERFACE_INCLUDE_DIRECTORIES)
@@ -19,10 +19,16 @@ get_target_property(BlockChain_INCLUDE_DIRS BlockChain INCLUDE_DIRECTORIES)
 message(STATUS "in_include_directories: ${BlockChain_INCLUDE_DIRS}")
 
 target_compile_options( BlockChain PRIVATE
+
+  # Prefered warnings
   $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
   $<$<CXX_COMPILER_ID:Clang>:-Weverything>
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic -Werror>
+
+  # Disable some warnings
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wno-c++98-compat>
+  $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wno-error=padded>
+
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-fsanitize=address,undefined>
   $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-fsanitize-address-use-after-scope>
    $<$<CONFIG:RELEASE>:-Ofast>
