--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,14 @@ add_executable(cachimbo_coin src/test.cpp)
 
 add_subdirectory(src/BlockChain)
 add_subdirectory(src/Utils)
+add_subdirectory(src/Api)
 
-target_include_directories(cachimbo_coin PUBLIC include)
+# target_include_directories(cachimbo_coin PRIVATE include/BlockChain)
+# target_include_directories(cachimbo_coin PRIVATE include/Utils)
+# target_include_directories(cachimbo_coin PRIVATE include/Utils)
 
 target_link_libraries(cachimbo_coin PRIVATE BlockChain)
 target_link_libraries(cachimbo_coin PRIVATE Utils)
-target_link_libraries(cachimbo_coin PUBLIC Crow::Crow)
+target_link_libraries(cachimbo_coin PRIVATE Api)
 
 target_compile_features(cachimbo_coin PRIVATE cxx_std_20)
-find_package(Crow)
