--- a/src/Api/CMakeLists.txt
+++ b/src/Api/CMakeLists.txt
@@ -1,23 +1,16 @@
 cmake_minimum_required(VERSION 3.25)
 
-add_library(BlockChain ${CMAKE_CURRENT_SOURCE_DIR}/BlockChain.cpp)
+add_library(Api Api.cpp)
 
-target_sources(
-  BlockChain
-  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Data.cpp
-         ${CMAKE_CURRENT_SOURCE_DIR}/IndexStructures/Heap/Heap.cpp
-         ${CMAKE_CURRENT_SOURCE_DIR}/IndexStructures/BST/BST.cpp)
+# target_sources( Api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Api.cpp)
 
 # Include include/BlockChainFloder
 get_filename_component(INCLUDE_FOLDER ../../include ABSOLUTE)
 
-target_include_directories(
-  BlockChain PUBLIC ${INCLUDE_FOLDER}/BlockChain
-                    ${INCLUDE_FOLDER}/BlockChain/IndexStructures)
-target_include_directories(BlockChain PRIVATE ${INCLUDE_FOLDER}/Utils)
+target_include_directories(Api PUBLIC ${INCLUDE_FOLDER}/Api)
 
 target_compile_options(
-  BlockChain
+  Api
   PRIVATE # Prefered warnings
           $<$<CXX_COMPILER_ID:MSVC>:/W4
           /WX>
@@ -40,9 +33,6 @@ target_compile_options(
           "-fsanitize=address,undefined")
 
 target_link_options(
-  BlockChain PUBLIC
-  $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-fsanitize=address,undefined>)
+  Api PUBLIC $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-fsanitize=address,undefined>)
 
-find_package(OpenSSL REQUIRED)
-target_link_libraries(BlockChain OpenSSL::Crypto)
-target_compile_features(BlockChain PUBLIC cxx_std_20)
+target_compile_features(Api PUBLIC cxx_std_20)
