--- a/Readme/api.yaml
+++ b/Readme/api.yaml
@@ -5,7 +5,7 @@ info:
     This API allows for managment of users, transactions and queries of the blockchain.
   version: 1.0.0
 tags:
-  - name: Gamepla
+  - name: Gameplay
 paths:
 
   # Whole board operations
