--- a/src/Utils/CMakeLists.txt
+++ b/src/Utils/CMakeLists.txt
@@ -11,7 +11,7 @@ target_sources(
 # Include include/BlockChainFloder
 get_filename_component(INCLUDE_FOLDER ../../include ABSOLUTE)
 
-target_include_directories(Utils PRIVATE ${INCLUDE_FOLDER}/Utils)
+target_include_directories(Utils PUBLIC ${INCLUDE_FOLDER}/Utils)
 
 target_compile_options(
   Utils
