--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(
 # set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(cachimbo_coin src/test.cpp)
+add_executable(cachimbo_coin src/test.cpp include/BlockChain/IndexStructures/Suffix/Suffix.hpp)
 
 add_subdirectory(src/BlockChain)
 add_subdirectory(src/Utils)
